# lichtfeld-depthmap-plugin

./: .gitignore  README.md  __init__.py  pyproject.toml
core/: __init__.py  colormaps.py  depthmap.py  obb.py  picker_state.py
operators/: __init__.py  point_picker.py
panels/: __init__.py  depthmap_panel.py
tools/: __init__.py  picker_tool.py
