# SPDX-FileCopyrightText: 2025 LichtFeld Studio Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "depthmap_viz"
version = "1.0.0"
description = "Depth map visualization with Jet and Grayscale colormaps for Gaussian Splats"
author = "Jacob van Beets"
min_lichtfeld_version = "0.5.0"

dependencies = [
    "numpy",
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
